--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -128,7 +128,7 @@
                     android:id="@+id/input_about"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginTop="20dp"
                     android:hint="@string/about_self"
                     android:theme="@style/GreyMaterialTextfield"
                     app:errorEnabled="true">
