--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -56,8 +56,8 @@
                         android:textColor="@color/colorPostText"
                         android:textSize="18sp"
                         android:textStyle="normal"
-                        android:layout_marginStart="@dimen/_16sdp"
-                        android:layout_marginLeft="@dimen/_16sdp"/>
+                        android:layout_marginStart="16dp"
+                        android:layout_marginLeft="16dp"/>
 
                     <androidx.appcompat.widget.AppCompatSpinner
                         android:id="@+id/cat_action_bar"
@@ -67,8 +67,8 @@
                         android:spinnerMode="dropdown"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginEnd="@dimen/_16sdp"
-                        android:layout_marginRight="@dimen/_16sdp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginRight="16dp"
                         android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
                 </RelativeLayout>
 
@@ -124,8 +124,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/_30sdp"
-            android:layout_marginBottom="@dimen/_30sdp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
             android:visibility="gone"
             android:theme="@android:style/Widget.ProgressBar.Small.Inverse"
             app:layout_constraintEnd_toStartOf="parent"
