--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,8 +60,8 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/tv_cloud"
-                android:layout_width="@dimen/_353sdp"
-                android:layout_height="@dimen/_196sdp"
+                android:layout_width="353dp"
+                android:layout_height="196dp"
                 android:paddingStart="4dp"
                 android:paddingLeft="4dp"
                 android:paddingEnd="4dp"
@@ -156,7 +156,7 @@
                         android:layout_centerVertical="true"
                         android:text="@string/create_account"
                         android:textColor="@color/colorPostText"
-                        android:textSize="@dimen/_10sdp"
+                        android:textSize="10dp"
                         android:textStyle="normal"
                         android:visibility="gone"/>
 
@@ -169,7 +169,7 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:textColor="@color/colorPostText"
-                        android:textSize="@dimen/_10sdp"
+                        android:textSize="10dp"
                         android:textStyle="normal"
                         />
                 </RelativeLayout>
