--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,8 +128,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/_30sdp"
-            android:layout_marginBottom="@dimen/_30sdp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp"
             android:visibility="gone"
             android:theme="@android:style/Widget.ProgressBar.Small.Inverse"
             app:layout_constraintEnd_toStartOf="parent"
@@ -140,7 +140,7 @@
         <RelativeLayout
             android:id="@+id/bottomBar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_50sdp"
+            android:layout_height="50dp"
             android:background="@color/colorBackgroundDark"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +148,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_50sdp"
+                android:layout_height="50dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -160,8 +160,8 @@
                     android:orientation="vertical">
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center_horizontal"
                         app:srcCompat="@drawable/ic_my_profile"/>
 
@@ -172,7 +172,7 @@
                         android:text="@string/my_profile"
                         android:textColor="@color/colorPostText"
                         android:textSize="10sp"
-                        android:layout_marginTop="@dimen/_2sdp"
+                        android:layout_marginTop="2dp"
                         android:textStyle="normal" />
 
                 </LinearLayout>
@@ -186,8 +186,8 @@
                     android:layout_gravity="center">
 
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_width="@dimen/_20sdp"
-                        android:layout_height="@dimen/_20sdp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center_horizontal"
                         app:srcCompat="@drawable/ic_logout"/>
 
@@ -198,7 +198,7 @@
                         android:text="@string/logout"
                         android:textColor="@color/colorPostText"
                         android:textSize="10sp"
-                        android:layout_marginTop="@dimen/_2sdp"
+                        android:layout_marginTop="2dp"
                         android:textStyle="normal" />
 
                 </LinearLayout>
