--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -58,6 +58,7 @@
                         android:src="@drawable/ic_action_back" />
 
                     <TextView
+                        android:id="@+id/title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
@@ -155,18 +156,18 @@
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/userImage"
-                    android:layout_width="@dimen/_100sdp"
-                    android:layout_height="@dimen/_100sdp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     app:civ_border_width="1dp"
                     app:civ_border_color="#cc8f8f"
                     android:layout_gravity="center_horizontal"
                     android:src="@drawable/ic_user_profile" />
 
                 <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/cat_action_bar"
+                    android:id="@+id/userTypeDropDown"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginTop="10dp"
                     android:gravity="left"
                     android:spinnerMode="dropdown"
                     android:theme="@android:style/Theme.Holo.Light.DarkActionBar" />
@@ -175,7 +176,7 @@
                     android:id="@+id/input_fname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_20sdp"
+                    android:layout_marginTop="20dp"
                     android:hint="@string/fname"
                     android:theme="@style/GreyMaterialTextfield"
                     app:errorEnabled="true">
