--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -16,15 +16,15 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_image"
-            android:layout_width="@dimen/_312sdp"
-            android:layout_height="@dimen/_154sdp"
+            android:layout_width="312dp"
+            android:layout_height="154dp"
             android:layout_gravity="center_horizontal"/>
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_society"
-            android:layout_width="@dimen/_170sdp"
-            android:layout_height="@dimen/_120sdp"
-            android:layout_marginTop="@dimen/_50sdp"
+            android:layout_width="170dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="50dp"
             android:layout_gravity="center_horizontal"/>
 
     </LinearLayout>
