--- a/app/src/main/res/layout/booking_request_dialog.xml
+++ b/app/src/main/res/layout/booking_request_dialog.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/_10sdp">
+    android:layout_margin="10dp">
 
     <TextView
         android:id="@+id/title"
@@ -73,8 +73,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/_5sdp"
-            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight=".50"
             android:hint="@string/to_date"
             android:theme="@style/GreyMaterialTextfield"
@@ -147,8 +147,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/_5sdp"
-            android:layout_marginLeft="@dimen/_5sdp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight=".50"
             android:hint="@string/to_date"
             android:theme="@style/GreyMaterialTextfield"
