--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -60,20 +60,35 @@
                         android:src="@drawable/ic_action_back" />
 
                     <EditText
+                        android:id="@+id/searchField"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginRight="80dp"
+                        android:layout_marginEnd="80dp"
                         android:layout_toRightOf="@+id/ib_back_toolbar"
                         android:textColor="@color/colorPostText"
-                        android:textSize="12dp"
+                        android:textSize="14sp"
                         android:padding="10dp"
                         android:textColorHint="@color/colorGreyText"
                         android:hint="@string/search_hint"
                         android:layout_centerVertical="true"
                         android:background="@color/colorTransparent"/>
+
+                    <Button
+                        android:id="@+id/searchBtn"
+                        style="@style/ThemeSmallButtonStyle"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="0dp"
+                        android:text="@string/search"
+                        android:textColor="@color/colorWhite" />
 
                 </RelativeLayout>
 
@@ -91,7 +106,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/all_user"
-                        android:checked="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginStart="10dp"
                         android:theme="@style/radioStyle"/>
